--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -4,9 +4,24 @@
     <meta charset='utf-8'>
     <title>Module2-Solution</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <!-- <link rel='stylesheet' type='text/css' media='screen' href='main.css'> -->
+    <link rel="stylesheet" href="css/sol.css">
 </head>
 <body>
-    
+    <h1>Our Menu</h1>
+    <div class="c1">
+            <div id="t1">Pizza</div>
+            <p id="p1">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta quisquam beatae quibusdam voluptatem voluptas iure sequi minima aut temporibus? Vel, accusamus? Ullam, possimus exercitationem in mollitia voluptate eligendi hic incidunt.</p>
+            </div>
+    <div class="c2">
+        <div id="t2">Cold-Coffee</div>
+        <p id="p2">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta quisquam beatae quibusdam voluptatem voluptas iure sequi minima aut temporibus? Vel, accusamus? Ullam, possimus exercitationem in mollitia voluptate eligendi hic incidunt.</p>
+        </div>
+    <div class="c3">
+        <div id="t3">Sandwich</div>
+        <p id="p3">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Soluta quisquam beatae quibusdam voluptatem voluptas iure sequi minima aut temporibus? Vel, accusamus? Ullam, possimus exercitationem in mollitia voluptate eligendi hic incidunt.</p>
+        </div>
 </body>
 </html>
